# tauri-postgres-agent-harness

./: .gitattributes  .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  REUSE.toml  SECURITY.md  eslint.config.mjs  knip.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  renovate.json  tsconfig.json
.claude/: settings.json
.claude-plugin/: marketplace.json  plugin.json
.github/: actionlint.yaml  zizmor.yml
.github/ISSUE_TEMPLATE/: bug.yml  gate-false-positive.yml  gate-proposal.yml
.github/workflows/: hygiene.yml  lint.yml  release.yml  scorecard.yml  selftest.yml
design/: BUILD-SPEC.md  critic.json  designs.json  repo-familiarization.json  research-findings.json  v0.1.5-audit.md  v0.1.6-audit.md
installer/: cli.mjs
installer/commands/: doctor.mjs  enable.mjs  graduate.mjs  init.mjs  update.mjs
installer/lib/: copy.mjs  detect.mjs  fs-walk.mjs  layout.mjs  manifest.mjs  merge-claude-settings.mjs  merge-gitignore.mjs  merge-package-json.mjs  merge-workspace-yaml.mjs  migrations.mjs  placeholders.mjs  prompts.mjs  reconcile.mjs  report.mjs  write-file.mjs
scripts/: check-canary-coverage.mjs  check-claims.mjs  check-complexity-ratchet.mjs  check-corpus-fidelity.mjs  check-plugin-manifest.mjs  check-release-lockstep.mjs  check-residue.mjs  check-reuse.mjs  check-rule-integrity.mjs  check-seeded-migrations.mjs  check-syntax.mjs  complexity-ratchet.json  generate-floor.mjs  hygiene.mjs  rule-integrity.json
scripts/lib/: complexity.mjs  rule-integrity.mjs
template/: migrations.json
template/base/: AGENTS.md  CITATION.cff  biome.jsonc  commitlint.config.mjs  cspell.json  deny.toml  dependency-cruiser.cjs  docker-compose.yml  env.example  eslint.config.mjs  gitattributes  gitignore  gitleaks.toml  knip.json  lefthook.yml  mcp.json  package.json.tmpl  playwright.config.ts  pnpm-workspace.yaml  renovate.json  rust-toolchain.toml  stryker.config.mjs  tsconfig.base.json  tsconfig.json  vitest.config.ts
template/base/.claude/: settings.json  settings.local.json.example  statusline.mjs
template/base/docs/: it-onboarding.md
template/base/e2e/: a11y.spec.ts  degraded-network.spec.ts  forced-colors.spec.ts  i18n.spec.ts  integration.spec.ts  interaction-latency.spec.ts  matrix.spec.ts  memory.spec.ts  mock-ipc.ts  motion.spec.ts  mutation.spec.ts  node-fs.d.ts  palette.spec.ts  reflow.spec.ts  states.spec.ts  theme.spec.ts  tsconfig.json
template/base/github/: CODEOWNERS  actionlint.yaml  pull_request_template.md  zizmor.yml
template/base/specs/: _template.md
template/base/tools/: build-check.mjs  bundle-budget.json  check-contract-drift.mjs  check-diff-coverage.mjs  check-docs-sync.mjs  check-duplication.mjs  check-e2e.mjs  check-gate-integrity.mjs  check-i18n.mjs  check-licenses.mjs  check-migrations.mjs  check-mutation-ratchet.mjs  check-native-perf.mjs  check-perf-budget.mjs  check-prompts-lock.mjs  check-rls-manifest.mjs  check-route-manifest.mjs  check-sources.mjs  check-styleguide-manifest.mjs  check-tauri-policy.mjs  check-test-quality.mjs  check-version-sync.mjs  decision-groups.json  dto-bounds-allow.json  duplication-allow.json  harness.config.mjs  i18n-allow.json  identity.lock.json  interaction-budget.json  license-exceptions.json  mutation-baseline.json  mutation-scope.mjs  native-perf-budget.json  perf-baseline.json  perf-baseline.mjs  perf-budget.json  prompts.lock.json  provenance-overrides.json  rls-exempt.json  route-allowlist.json  (+5 more)
template/modules/mutation/: stryker.config.mjs  (+1 more)
template/stack/apps/desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json  windows-app-manifest.xml
template/stack/apps/desktop/src-tauri/benches/: host.rs
template/stack/apps/desktop/src-tauri/capabilities/: main.json
template/stack/apps/desktop/src-tauri/icons/: icon.icns
template/stack/apps/desktop/src-tauri/src/: lib.rs
tests/canary/: injections.json
tests/gates/: build-check.test.mjs  check-canary-coverage.test.mjs  check-claims.test.mjs  check-complexity-ratchet.test.mjs  check-contract-drift.test.mjs  check-diff-coverage.test.mjs  check-docs-sync.test.mjs  check-duplication.test.mjs  check-e2e.test.mjs  check-gate-integrity.test.mjs  check-i18n.test.mjs  check-migrations.test.mjs  check-mutation-ratchet.test.mjs  check-native-perf.test.mjs  check-perf-budget.test.mjs  check-prompts-lock.test.mjs  check-reuse.test.mjs  check-rls-manifest.test.mjs  check-route-manifest.test.mjs  check-rule-integrity.test.mjs  check-sources.test.mjs  check-styleguide-manifest.test.mjs  check-tauri-policy.test.mjs  check-test-quality.test.mjs  check-version-sync.test.mjs  floor-lockstep.test.mjs  gate-canary-misc.test.mjs  gate-helpers.test.mjs  hash-inputs.test.mjs  provenance-rules.test.mjs  validate-runner.test.mjs
tests/hooks/: hook-contract.test.mjs  hookio-failclosed.test.mjs
tests/installer/: check-seeded-migrations.test.mjs  copy.test.mjs  detect.test.mjs  fs-walk.test.mjs  graduate.test.mjs  lifecycle.test.mjs  manifest.test.mjs  merge-claude-settings.test.mjs  merge-gitignore.test.mjs  merge-package-json.test.mjs  merge-workspace-yaml.test.mjs  migrations.test.mjs  placeholders.test.mjs  prompts.test.mjs  reconcile.test.mjs  report.test.mjs  write-file.test.mjs
(+221 files in other folders)
